<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
							 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.babai.wml</groupId>
	<artifactId>wml</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>

	<name>WML-Parser-LSP</name>
	<description>A WML Parser and LSP server</description>
	<url>http://example.com</url>
	
	<developers>
		<developer>
			<id>babaissarkar</id>
			<name>Subhraman Sarkar</name>
			<email>suvrax@gmail.com</email>
			<timezone>Asia/Kolkata</timezone>
		</developer>
	</developers>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<lsp4j.version>0.24.0</lsp4j.version>
	</properties>
	
	<licenses>
		<license>
			<name>GNU General Public License, version 2 or later</name>
			<url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
			<distribution>repo</distribution>
			<comments>GPL v2 or any later version</comments>
		</license>
	</licenses>


	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.2</version>
		</dependency>
		<!-- LSP4J Core -->
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>

		<!-- JSON-RPC (required by LSP4J) -->
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javacc-maven-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>javacc</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>javacc</goal>
						</goals>
						<configuration>
							<sourceDirectory>
								${basedir}/src/main/java/com/babai/wml/preprocessor
							</sourceDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.29.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<lineEnding>CRLF</lineEnding>
					<configFile>${basedir}/eclipse-default.xml</configFile>
					<directories>
						<directory>${project.build.directory}/generated-sources</directory>
					</directories>
				</configuration>
				<executions>
					<execution>
						<id>format-source</id>
						<phase>process-sources</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<finalName>${project.artifactId}</finalName>
					<outputDirectory>${project.basedir}/jar</outputDirectory>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
					<artifactSet>
						<includes>
							<include>org.eclipse.lsp4j:org.eclipse.lsp4j</include>
							<include>org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc</include>
							<include>com.google.code.gson:gson</include>
						</includes>
					</artifactSet>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>com.babai.wml.Main</mainClass>
						</transformer>
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>1.5.0</version>
				
				<configuration>
					<name>${project.name}</name>
					<description>${project.description}</description>
					<input>${project.basedir}${file.separator}jar</input>
					<destination>${project.basedir}</destination>
					<appVersion>${project.version}</appVersion>
					<arguments>${jpackage.args}</arguments>
					<mainClass>com.babai.wml.Main</mainClass>
					<mainJar>${project.artifactId}.jar</mainJar>
				</configuration>
				
				<executions>
					<execution>
						<id>win</id>
						<configuration>
							<type>MSI</type>
							<icon>src${file.separator}main${file.separator}resources${file.separator}${project.artifactId}.ico</icon>
							<winMenu>true</winMenu>
							<winMenuGroup>${project.name}</winMenuGroup>
							<winShortcut>true</winShortcut>
							<winPerUserInstall>true</winPerUserInstall>
							<winDirChooser>true</winDirChooser>
						</configuration>
					</execution>
					<execution>
						<id>linux</id>
						<configuration>
							<type>DEB</type>
							<icon>src/main/resources/${project.artifactId}.png</icon>
							<installDir>/usr</installDir>
							<linuxAppCategory>Games</linuxAppCategory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
		</plugins>
	</build>
</project>
